tests/NormalTests/paczka1/fuzzy1/73118082.err
Error in line 2: jYK5L2k5 A92 23,4
Error in line 16: EMZ S310 68,6
Error in line 20: 4Al S310 2399,4
Error in line 13: f1pBO A998 3,2
Error in line 18: EMZ A92 35,5
Error in line 32: EMZ A998 83,9
